--- a/dashboard/online_help/templates/online_help/per_documentation.html
+++ b/dashboard/online_help/templates/online_help/per_documentation.html
@@ -10,7 +10,7 @@
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
             <h2 class="mb-0">Online Help User Guide</h2>
-            <a href="" class="btn btn-outline-dark btn-sm">Edit</a>
+            <a href="{% url 'online_help:section_edit' %}" class="btn btn-outline-dark btn-sm">Edit</a>
         </div>
         <div class="card-body">
             <div class="mb-3">
