--- a/dashboard/online_help/templates/online_help/per_user.html
+++ b/dashboard/online_help/templates/online_help/per_user.html
@@ -22,6 +22,7 @@
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Section</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Sub</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Color</th>
+                    <th style="border: 1px solid #444; padding: 8px; text-align: left;">Completion</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Action</th>
                 </tr>
             </thead>
@@ -30,10 +31,13 @@
                     <td style="border: 1px solid #444; padding: 8px;">
                         Getting Started
                     </td>
-                    <td style="border: 1px solid #444; padding: 8px;">Introduction</td>
+                    <td style="border: 1px solid #444; padding: 8px;">
+                        <a href="{% url 'online_help:per_subsection' %}" class="hover-link">Introduction</a>
+                    </td>
                     <td style="border: 1px solid #444; padding: 8px; background-color: yellow;">
                         Yellow
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">50%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="{% url 'online_help:per_user_edit' %}">Edit</a>
                     </td>
@@ -44,6 +48,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: grey;">
                         Grey
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">20%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -54,6 +59,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: Green;">
                         Green
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">80%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -67,6 +73,7 @@
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Section</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Sub</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Color</th>
+                    <th style="border: 1px solid #444; padding: 8px; text-align: left;">Completion</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Action</th>
                 </tr>
             </thead>
@@ -77,6 +84,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: yellow;">
                         Yellow
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">24%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -87,6 +95,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: grey;">
                         Grey
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">76%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -97,6 +106,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: Green;">
                         Green
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">67%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -110,6 +120,7 @@
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Section</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Sub</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Color</th>
+                    <th style="border: 1px solid #444; padding: 8px; text-align: left;">Completion</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Action</th>
                 </tr>
             </thead>
@@ -120,6 +131,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: yellow;">
                         Yellow
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">75%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -130,6 +142,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: grey;">
                         Grey
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">10%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -140,6 +153,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: Green;"></td>
                         Green
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">13%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -153,6 +167,7 @@
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Section</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Sub</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Color</th>
+                    <th style="border: 1px solid #444; padding: 8px; text-align: left;">Completion</th>
                     <th style="border: 1px solid #444; padding: 8px; text-align: left;">Action</th>
                 </tr>
             </thead>
@@ -163,6 +178,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: yellow;">
                         Yellow
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">82%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -173,6 +189,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: grey;">
                         Grey
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">85%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
@@ -183,6 +200,7 @@
                     <td style="border: 1px solid #444; padding: 8px; background-color: Green;">
                         Green
                     </td>
+                    <td style="border: 1px solid #444; padding: 8px;">23%</td>
                     <td style="border: 1px solid #444; padding: 8px;">
                         <a href="">Edit</a>
                     </td>
