--- a/dashboard/online_help/templates/online_help/home.html
+++ b/dashboard/online_help/templates/online_help/home.html
@@ -100,6 +100,7 @@
                                     <td style="border: 1px solid #444; padding: 8px; background-color: Green;">
                                         Green
                                     </td>
+                                    <td style="border: 1px solid #444; padding: 8px;">95%</td>
                                 </tr>
                             </tbody>
                         </table>
