--- a/dashboard/online_help/templates/online_help/tasks_edit.html
+++ b/dashboard/online_help/templates/online_help/tasks_edit.html
@@ -16,7 +16,7 @@
             <div class="mb-3">
                 {% for docu in radiant_documentation %}
                 <h5 class="text-muted">
-                    <a href="" class="hover-link">{{ docu }}</a>
+                    <a href="{% url 'online_help:per_documentation' %}" class="hover-link">{{ docu }}</a>
                 </h5>
                 {% endfor %}
             </div>
