--- a/dashboard/online_help/templates/online_help/success_documentation.html
+++ b/dashboard/online_help/templates/online_help/success_documentation.html
@@ -15,7 +15,7 @@
                 <li class="list-group-item"><strong>Section:</strong> {{ section }}</li>
                 <li class="list-group-item"><strong>Subsection:</strong> {{ subsection }}</li>
                 <li class="list-group-item"><strong>Writer:</strong> {{ writer }}</li>
-                <li class="list-group-item"><strong>Color:</strong>">{{ color }}</span></li>
+                <li class="list-group-item"><strong>Color:</strong> {{ color }}</span></li>
             </ul>
         </div>
     </div>
