per_section, -er_documentation same

--- a/dashboard/online_help/templates/online_help/home.html
+++ b/dashboard/online_help/templates/online_help/home.html
@@ -95,12 +95,12 @@
                                     <td style="border: 1px solid #444; padding: 8px;">10%</td>
                                 </tr>
                                 <tr>
-                                    <td style="border: 1px solid #444; padding: 8px;">Testing and Debugging On-Chip</td>
-                                    <td style="border: 1px solid #444; padding: 8px;">Creating Reveal Modules</td>
-                                    <td style="border: 1px solid #444; padding: 8px; background-color: Green;">
+                                    <td style="border: 1px solid #444; padding: 8px;">Constraints Reference Guide</td>
+                                    <td style="border: 1px solid #444; padding: 8px;">Lattice Synthesis Engine Constraints</td>
+                                    <td style="border: 1px solid #444; padding: 8px; background-color: green;">
                                         Green
                                     </td>
-                                    <td style="border: 1px solid #444; padding: 8px;">95%</td>
+                                    <td style="border: 1px solid #444; padding: 8px;">90%</td>
                                 </tr>
                             </tbody>
                         </table>
