--- a/dashboard/online_help/templates/online_help/per_user_test.html
+++ b/dashboard/online_help/templates/online_help/per_user_test.html
@@ -7,7 +7,7 @@
 
 <div class="col-md-12">
     <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
-        <h3 class="m-0">Ave Manriquez</h3>
+        <h3 class="m-0">{{ writer.writer_name }}</h3>
         <!-- <a href="" class="btn btn-outline-dark btn-sm">Edit</a> -->
     </div>
     <div class="p-3" style="position: sticky; top: 30px; z-index: 1000;">
